# PDFium-Android-Demo

./: .gitignore  .gitmodules  PDFIUM.lnk  README.md  build.gradle  settings.gradle
LibPdfium/: build.gradle
LibPdfium/src/main/: .gitignore  AndroidManifest.xml  build.sh  makefile  pdfium_lib.mk  pdfium_lib.sln  pdfium_lib.vcxproj  pdfium_lib.vcxproj.filters  pdfium_lib_android.sln  pdfium_lib_android.vcxproj  pdfium_lib_android.vcxproj.filters  pdfiumagg23.mk  pdfiumbase.mk  pdfiumfpdfsdk.mk  pdfiumfreetype.mk  pdfiumfxcodec.mk  pdfiumicu.mk  pdfiumjpeg.mk  pdfiumjpeg_turbo.mk  pdfiumlcms.mk  pdfiumopenjpeg20.mk  pdfiumzlib.mk
LibPdfium/src/main/builds/agg23/: agg23.vcxproj  agg23.vcxproj.filters
LibPdfium/src/main/builds/agg23_android/: agg23_android.vcxproj  agg23_android.vcxproj.filters
LibPdfium/src/main/builds/fpdfsdk/: fpdfsdk.vcxproj  fpdfsdk.vcxproj.filters
LibPdfium/src/main/builds/fpdfsdk_android/: fpdfsdk_android.vcxproj  fpdfsdk_android.vcxproj.filters
LibPdfium/src/main/builds/freetype/: freetype.vcxproj  freetype.vcxproj.filters
LibPdfium/src/main/builds/freetype_android/: freetype_android.vcxproj  freetype_android.vcxproj.filters
LibPdfium/src/main/builds/fxcodec/: fxcodec.vcxproj  fxcodec.vcxproj.filters
LibPdfium/src/main/builds/fxcodec_android/: fxcodec_android.vcxproj  fxcodec_android.vcxproj.filters
LibPdfium/src/main/builds/icu/: icu.vcxproj  icu.vcxproj.filters
LibPdfium/src/main/builds/icu_android/: icu_android.vcxproj  icu_android.vcxproj.filters
LibPdfium/src/main/builds/lcms/: lcms.vcxproj  lcms.vcxproj.filters
LibPdfium/src/main/builds/lcms_android/: lcms_android.vcxproj  lcms_android.vcxproj.filters
LibPdfium/src/main/builds/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
LibPdfium/src/main/builds/libjpeg_android/: libjpeg_android.vcxproj  libjpeg_android.vcxproj.filters
LibPdfium/src/main/builds/libjpeg_turbo/: libjpeg_turbo.vcxproj  libjpeg_turbo.vcxproj.filters
LibPdfium/src/main/builds/libopenjpeg20/: libopenjpeg20.vcxproj  libopenjpeg20.vcxproj.filters
LibPdfium/src/main/builds/libopenjpeg20_android/: libopenjpeg20_android.vcxproj  libopenjpeg20_android.vcxproj.filters
LibPdfium/src/main/builds/pdfium_base/: pdfium_base.vcxproj  pdfium_base.vcxproj.filters
LibPdfium/src/main/builds/pdfium_base_android/: pdfium_base_android.vcxproj  pdfium_base_android.vcxproj.filters
LibPdfium/src/main/builds/render_pdf/: render_pdf.cpp  render_pdf.vcxproj
LibPdfium/src/main/builds/render_pdf/src/: render_pdf_options.h
LibPdfium/src/main/builds/zlib/: zlib.vcxproj  zlib.vcxproj.filters
LibPdfium/src/main/builds/zlib_android/: zlib_android.vcxproj  zlib_android.vcxproj.filters
LibPdfium/src/main/cpp/: CMakeLists.txt  mainJNILib.cpp  util.h
LibPdfium/src/main/cpp/core/: makefile  pdfiumfdrm.mk  pdfiumfpdfapi.mk  pdfiumfpdfdoc.mk  pdfiumfpdftext.mk  pdfiumfxcodec.mk  pdfiumfxcrt.mk  pdfiumfxge.mk
LibPdfium/src/main/cpp/core/include/fpdfdoc/: fpdf_doc.h
LibPdfium/src/main/cpp/core/include/fxge/: fx_freetype.h
LibPdfium/src/main/cpp/fpdfsdk/: Android.mk  Application.mk  makefile  pdfium.mk  pdfiumformfiller.mk  pdfiumfxedit.mk  pdfiumjavascript.mk  pdfiumpdfwindow.mk
LibPdfium/src/main/cpp/fpdfsdk/include/: fsdk_mgr.h
LibPdfium/src/main/cpp/fpdfsdk/src/: fpdf_dataavail.cpp  fpdf_sysfontinfo.cpp  fpdfeditpage.cpp  fpdfview.cpp  fsdk_mgr.cpp
LibPdfium/src/main/java/com/shockwave/pdfium/: PdfiumCore.java
LibPdfium/src/main/java/me/yluo/pdfiumandroid/: MainActivity.java
LibPdfiumSep/: build.gradle
LibPdfiumSep/src/main/java/com/shockwave/pdfium/: PdfiumCore.java
LibPdfiumSep/src/main/jni/: Android.mk  Application.mk
LibPdfiumSep/src/main/jni/lib/: Readme.md
LibPdfiumSep/src/main/jni/src/: mainJNILib.cpp
PDocViewer/: build.gradle  gradle.properties
PDocViewer/src/main/: AndroidManifest.xml
PDocViewer/src/main/java/com/knizha/PDocViewer/: AnimationManager.java  CMN.java  CacheManager.java  DecodingAsyncTask.java  DragPinchManager.java  PDFView.java  PDocBenchMarkctivity.java  PDocMainActivity.java  PDocView.java  PDocument.java  PagesLoader.java  PdfFile.java  RenderingHandler.java
PDocViewer/src/main/java/com/knizha/PDocViewer/exception/: FileNotFoundException.java  PageRenderingException.java
PDocViewer/src/main/java/com/knizha/PDocViewer/link/: DefaultLinkHandler.java  LinkHandler.java
PDocViewer/src/main/java/com/knizha/PDocViewer/listener/: Callbacks.java  OnDrawListener.java  OnErrorListener.java  OnLoadCompleteListener.java  OnLongPressListener.java  OnPageChangeListener.java  OnPageErrorListener.java  OnPageScrollListener.java  OnRenderListener.java  OnTapListener.java
PDocViewer/src/main/java/com/knizha/PDocViewer/model/: LinkTapEvent.java  PagePart.java
PDocViewer/src/main/java/com/knizha/PDocViewer/scroll/: DefaultScrollHandle.java  ScrollHandle.java
PDocViewer/src/main/java/com/knizha/PDocViewer/source/: AssetSource.java  ByteArraySource.java  DocumentSource.java  FileSource.java  InputStreamSource.java  UriSource.java
PDocViewer/src/main/java/com/knizha/PDocViewer/util/: ArrayUtils.java  Constants.java  FileUtils.java  FitPolicy.java  MathUtils.java  PageSizeCalculator.java  SnapEdge.java  Util.java
PDocViewer/src/main/res/layout/: activity_main.xml
android-pdf-viewer/: bintray.gradle  build.gradle
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/: PDFView.java
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
